# concurrentesAlglobo

./: Cargo.toml  LICENSE  README.md  failed.csv  fallidos.csv  pagos.csv  payments.csv  procesados.csv  processed.csv  salida_banco.csv
airline/: Cargo.toml
airline/src/: main.rs
alglobo/: Cargo.toml
alglobo/src/: airline_client.rs  bank_client.rs  hotel_client.rs  main.rs  output_logger.rs  payments_queue.rs  queue.rs  replication.rs  transactional_entity.rs
alglobo/src/leader_election/: atomic_value.rs  bully.rs  control_message.rs  leader_election_trait.rs  mod.rs
banco/: Cargo.toml
banco/src/: main.rs
helpers/: Cargo.toml
helpers/src/: alglobo_transaction.rs  entity_main.rs  event.rs  event_protocol.rs  lib.rs  protocol.rs  server.rs
hotel/src/: main.rs
stats/: Cargo.toml
stats/src/: main.rs
