[package]
name = "alglobo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
helpers = { path = "../helpers" }
csv = "1.1"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
tokio = "1.19"
